# jupyterhub-idle-culler

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  RELEASE.md  dev-requirements.txt  jupyterhub_config.py  pyproject.toml  setup.py
.github/: dependabot.yaml
.github/workflows/: release.yaml  test.yaml
jupyterhub_idle_culler/: __init__.py  __main__.py  utils.py
tests/: conftest.py  jupyterhub_config.py  test_idle_culler.py
