# build-system
# - ref: https://peps.python.org/pep-0517/
#
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# project
# - ref 1: https://peps.python.org/pep-0621/
# - ref 2: https://hatch.pypa.io/latest/config/metadata/#project-metadata
#
[project]
name = "jupyterhub-idle-culler"
description = "JupyterHub Python repository template"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "COPYING.md"}
keywords = ["jupyterhub"]
authors = [
    {name = "Jupyter Contributors", email = "jupyter@googlegroups.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "tornado",
    "packaging",
    "python-dateutil",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "jupyterhub",
    "jupyterlab",
    "notebook",
    "nullauthenticator",  # only needed for jupyterhub 1.x
    "psutil",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[project.scripts]
"cull_idle_servers.py" = "jupyterhub_idle_culler:main"
"jupyterhub-idle-culler" = "jupyterhub_idle_culler:main"

[project.urls]
Documentation = "https://github.com/jupyterhub/jupyterhub-idle-culler#readme"
Source = "https://github.com/jupyterhub/jupyterhub-idle-culler"
Issues = "https://github.com/jupyterhub/jupyterhub-idle-culler/issues"


# hatch ref: https://hatch.pypa.io/latest/
#
[tool.hatch.version]
path = "jupyterhub_idle_culler/__init__.py"


# autoflake is used for autoformatting Python code
#
# ref: https://github.com/PyCQA/autoflake#readme
#
[tool.autoflake]
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true


# isort is used for autoformatting Python code
#
# ref: https://pycqa.github.io/isort/
#
[tool.isort]
profile = "black"


# pytest is used for running Python based tests
#
# ref: https://docs.pytest.org/en/stable/
#
[tool.pytest.ini_options]
addopts = "--verbose --color=yes --durations=10 --cov=jupyterhub_idle_culler"
asyncio_mode = "auto"


# tbump is used to simplify and standardize the release process when updating
# the version, making a git commit and tag, and pushing changes.
#
# ref: https://github.com/your-tools/tbump#readme
#
[tool.tbump]
github_url = "https://github.com/jupyterhub/jupyterhub-idle-culler"

[tool.tbump.version]
current = "1.4.0"
regex = '''
    (?P<major>\d+)
    \.
    (?P<minor>\d+)
    \.
    (?P<patch>\d+)
    (?P<pre>((a|b|rc)\d+)|)
    \.?
    (?P<dev>(?<=\.)dev\d*|)
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

[[tool.tbump.file]]
src = "jupyterhub_idle_culler/__init__.py"
